2014-06-23  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc (dll_list::alloc): Fix buffer overrun (CID 59940).

2014-06-23  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (insert_file): Fix resource leaks (CIDs 59987, 59988).

2014-06-23  Corinna Vinschen  <corinna@vinschen.de>

	* ldap.cc (CYG_LDAP_TIMEOUT): Set to 5 secs.
	(CYG_LDAP_ENUM_TIMEOUT): New timeout value for enumeration only.  Set
	to 60 secs.
	(CYG_LDAP_ENUM_PAGESIZE): Define as number of entries per single
	search page.  Set to 100.  Use throughout.
	(def_tv): Rename from tv.  Use throughout.
	(enum_tv): New variable.  Use in call to ldap_get_next_page_s.

2014-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* ldap.cc (CYG_LDAP_TIMEOUT): Define as timeout value.  Set to 30 secs
	for now.  Use throughout.
	* uinfo.cc (colon_to_semicolon): New local function.
	(pwdgrp::fetch_account_from_windows): Convert all colons in AD gecos 
	entry to semicolons.

2014-06-17  David Stacey  <drstacey@tiscali.co.uk>

	* libc/rexec.cc (cygwin_rexec): Make ahostbuf static to avoid returning
	an out-of-scope address.

2014-06-16  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::evaluate_events): Call
	WSASetLastError after setsockopt.  Explain why.

2014-06-16  Denis Excoffier  <cygwin@Denis-Excoffier.org>

	* grp.cc (getgrouplist): Fix setting ngroups to make sure to return
	the right value.

2014-06-05  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* timer.cc (timer_tracker::cancel): Demote api_fatal to system_printf,
	printing more details about odd failure condition.

2014-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (ldap_memfreeW): Remove.
	(ldap_msgfree): Import.
	* ldap.cc: Throughout, use ldap_msgfree to free LDAPMessage memory,
	rather than ldap_memfreeW.
	(cyg_ldap::next_account): Immediately abandon search when quiting from
	search.

2014-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (ldap_abandon): Remove.