@@ -1,5 +1,10 @@
 2014-06-23  Corinna Vinschen  <corinna@vinschen.de>
 
+	* environ.cc (regopt): Allocate small local buffer to avoid copying
+	twice.  Fixes resource leak (CID 60012).  Add comment.
+
+2014-06-23  Corinna Vinschen  <corinna@vinschen.de>
+
 	* dll_init.cc (dll_list::alloc): Fix buffer overrun (CID 59940).
 
 2014-06-23  Corinna Vinschen  <corinna@vinschen.de>
